añadiendo cosas de google de forma supuestamente mejor... POM.XML actualizado para usar las dependencias de librerias de google usadas

--- a/socialEyem-web/pom.xml
+++ b/socialEyem-web/pom.xml
@@ -48,7 +48,30 @@
             <version>4.1.5.RELEASE</version>
         </dependency>
         
+        <!-- cosas de google -->
+        <dependency>
+            <groupId>com.google.http-client</groupId>
+            <artifactId>google-http-client</artifactId>
+            <version>1.13.1-beta</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.http-client</groupId>
+            <artifactId>google-http-client-jackson</artifactId>
+            <version>1.13.1-beta</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.apis</groupId>
+            <artifactId>google-api-services-oauth2</artifactId>
+            <version>v2-rev29-1.13.2-beta</version>
+        </dependency>
+        
     </dependencies>
+    <repositories>
+        <repository>
+            <id>google-api-services</id>
+            <url>http://google-api-client-libraries.appspot.com/mavenrepo</url>
+        </repository>
+    </repositories>
 
     <build>
         <plugins>
