--- a/socialEyem-web/pom.xml
+++ b/socialEyem-web/pom.xml
@@ -43,6 +43,7 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-web</artifactId>
             <version>4.1.5.RELEASE</version>
+            <type>jar</type>
         </dependency>
         
         <!--spring core-->
