--- a/socialEyem-web/src/main/webapp/WEB-INF/web.xml
+++ b/socialEyem-web/src/main/webapp/WEB-INF/web.xml
@@ -23,6 +23,12 @@
         <servlet-name>Faces Servlet</servlet-name>
         <servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
         <load-on-startup>1</load-on-startup>
+         <multipart-config>
+            <location>/Users/inftel13/Dropbox/casa-inftel/NetBeansProjects/socialEyem/socialEyem-web/src/main/webapp/resources/uploads</location>
+            <max-file-size>20848820</max-file-size>
+            <max-request-size>418018841</max-request-size>
+            <file-size-threshold>1048576</file-size-threshold>
+        </multipart-config>
     </servlet>
     <servlet-mapping>
         <servlet-name>Faces Servlet</servlet-name>
